k8s/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lowry-celery
  namespace: lowry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lowry-celery
  template:
    metadata:
      labels:
        app: lowry-celery
    spec:
      containers:
      - name: lowry-celery-container
        image: giorgi023/lowry-backend:latest
        imagePullPolicy: "Always"
        command: [celery, -A, src.celery_worker, worker, --loglevel=info]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
