k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lowry-api
  namespace: lowry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lowry-api
  template:
    metadata:
      labels:
        app: lowry-api
    spec:
      containers:
      - name: lowry-api-container
        image: giorgi023/lowry-backend:latest
        imagePullPolicy: "Always"
        ports:
          - containerPort: 8000
        command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: lowry-api-service
  namespace: lowry
spec:
  selector:
    app: lowry-api
  ports:
    - name: api
      protocol: TCP
      port: 8000
      targetPort: 8000
