k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lowry-db
  namespace: lowry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lowry-db
  template:
    metadata:
      labels:
        app: lowry-db
    spec:
      containers:
        - name: lowry-db-container
          image: postgres:15
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: lowry-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: lowry-db-service
  namespace: lowry
spec:
  selector:
    app: lowry-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
