k8s/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lowry-minio
  namespace: lowry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lowry-minio
  template:
    metadata:
      labels:
        app: lowry-minio
    spec:
      containers:
        - name: lowry-minio-container
          image: minio/minio:RELEASE.2025-02-18T16-25-55Z
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "250m"
              memory: "512Mi"

          volumeMounts:
            - name: minio-data
              mountPath: /data
          command: ["minio", "server", "/data", "--console-address", ":9001"]
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: lowry-minio
  namespace: lowry
spec:
  selector:
    app: lowry-minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
