k8s/lowry-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lowry-ingress-main
  namespace: lowry
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lowry-api-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: lowry-frontend-service
                port:
                  number: 80
